# dialograph

./: .gitignore  .pre-commit-config.yaml  README.md  dialograph.html  main.py  mkdocs.yml  practice.py  pyproject.toml
docs/: index.md  visualization.md
docs/api/: dialograph.md  edge.md  node.md
src/dialograph/: __init__.py
src/dialograph/agent/: README.md  agent.py
src/dialograph/core/: __init__.py  draw.py  edge.py  graph.py  node.py
src/dialograph/traversal/: retrieve.py
tests/: test_draw.py  test_visualization.py
