[project]
name = "dialograph"
version = "0.1.0"
description = "Dialograph is a Python toolkit for building, evolving, and reasoning over temporal dialogue graphs for proactive conversational agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "author" }
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/dialograph"]

[tool.uv.extra-build-dependencies]
cchardet = ["cython"]
